Deploy and backup scripts, fixed forex transaction calculations, small FIRE ui fix